--- a/packages/svrx-ui-server/package.json
+++ b/packages/svrx-ui-server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "find-free-port": "^2.0.0",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
     "koa-combine-routers": "^4.0.2",
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
