--- a/packages/svrx-plugin-ui/package.json
+++ b/packages/svrx-plugin-ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "engines": {
-    "svrx": "0.0.2"
+    "svrx": "^1.0.5"
   },
   "keywords": [
     "svrx",
