--- a/packages/svrx-ui-client/package.json
+++ b/packages/svrx-ui-client/package.json
@@ -43,6 +43,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-jsonschema-form": "^2.0.0-alpha.1",
     "redux": "^4.0.4",
     "redux-react-hook": "^3.3.2"
   },
