--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "description": "UI tool for svrx",
+  "description": "UI plugin for svrx",
   "private": true,
   "scripts": {
     "build": "lerna run build",
@@ -12,6 +12,7 @@
     "lerna:version": "lerna version",
     "lerna:publish": "lerna publish from-git --yes",
     "version": "lerna clean --yes && lerna bootstrap --ignore-scripts -- --no-audit && git add packages/*/package-lock.json",
+    "prepare": "npm run build",
     "postinstall": "lerna bootstrap"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/x-orpheus/svrx-ui.git"
+    "url": "git+https://github.com/svrxjs/svrx-ui.git"
   },
   "keywords": [
     "svrx",
@@ -49,7 +50,7 @@
   "author": "x-orpheus",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/x-orpheus/svrx-ui/issues"
+    "url": "https://github.com/svrxjs/svrx-ui/issues"
   },
-  "homepage": "https://svrx.gitbook.io/docs/"
+  "homepage": "https://svrx.io/"
 }
