--- a/packages/svrx-ui-server/package.json
+++ b/packages/svrx-ui-server/package.json
@@ -12,11 +12,11 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "svrx-ui-client": "^0.0.2",
-    "@svrx/util": "^1.0.5"
+    "@svrx/util": "^1.1.4"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/x-orpheus/svrx-ui.git"
+    "url": "git+https://github.com/svrxjs/svrx-ui.git"
   },
   "keywords": [
     "svrx",
@@ -24,10 +24,10 @@
     "mock",
     "dev-server"
   ],
-  "author": "x-orpheus",
+  "author": "C.Y.Xu<itsxcy@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/x-orpheus/svrx-ui/issues"
+    "url": "https://github.com/svrxjs/svrx-ui/issues"
   },
-  "homepage": "https://svrx.gitbook.io/docs/"
+  "homepage": "https://svrx.io/"
 }
