--- a/packages/svrx-ui/package.json
+++ b/packages/svrx-ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/x-orpheus/svrx-ui.git"
+    "url": "git+https://github.com/svrxjs/svrx-ui.git"
   },
   "keywords": [
     "svrx",
@@ -13,12 +13,12 @@
     "mock",
     "dev-server"
   ],
-  "author": "x-orpheus",
+  "author": "C.Y.Xu<itsxcy@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/x-orpheus/svrx-ui/issues"
+    "url": "https://github.com/svrxjs/svrx-ui/issues"
   },
-  "homepage": "https://svrx.gitbook.io/docs/",
+  "homepage": "https://svrx.io/",
   "dependencies": {
     "svrx-ui-server": "^0.0.2"
   }
