--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ language: node_js
 node_js:
   - "8"
   - "10"
+  - "12"
 
 cache: npm
+
+install:
+  - npm install
+
+before_script:
+  - npm run build
 
 script:
   - npm test
@@ -18,4 +25,5 @@ deploy:
   skip_cleanup: true
   on:
     node: "10"
-    tags: true
+    all_branches: true
+    condition: ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^release\/.*$
