--- a/packages/svrx-ui-client/package.json
+++ b/packages/svrx-ui-client/package.json
@@ -39,18 +39,18 @@
   },
   "homepage": "https://svrx.io/",
   "dependencies": {
-    "antd": "^3.20.7",
+    "antd": "^3.26.4",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-jsonschema-form": "^2.0.0-alpha.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.12.0",
-    "customize-cra": "^0.4.1",
-    "eslint": "^5.16.0",
-    "react-app-rewired": "^2.1.3",
-    "react-scripts": "3.0.1"
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
+    "eslint": "^6.8.0",
+    "react-app-rewired": "^2.1.5",
+    "react-scripts": "^3.3.0"
   }
 }
