--- a/packages/svrx-ui-server/package.json
+++ b/packages/svrx-ui-server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "svrx-ui-server",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "UI server for svrx-ui",
   "main": "index.js",
   "dependencies": {
+    "@svrx/util": "^1.1.4",
     "find-free-port": "^2.0.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
@@ -11,8 +12,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "svrx-ui-client": "^0.0.2",
-    "@svrx/util": "^1.1.4"
+    "svrx-ui-client": "^0.1.0"
   },
   "repository": {
     "type": "git",
