--- a/packages/svrx-ui-client/package.json
+++ b/packages/svrx-ui-client/package.json
@@ -7,6 +7,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
+  "main": "entry.js",
   "files": [
     "build"
   ],
